<resources>
    <string name="app_name">企好搜</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="set_menu_list">
        <item>@string/login_username_hint</item>
        <item>@string/email</item>
        <item>@string/reset_password</item>
    </string-array>

    <string-array name="begin_search">
        <item>@string/history_search</item>
        <item>@string/my_collect</item>
    </string-array>
    <string-array name="copy_right">
        <item>@string/work_copy_right</item>
        <item>@string/software_copy_right</item>
    </string-array>


    <string-array name="enterprise_info">
        <item>工商信息</item>
        <item>主要人员</item>
        <item>变更信息</item>
        <item>股东信息</item>
        <item>年报</item>
    </string-array>


    <string name="newUpdateAvailable">发现新版本</string>
    <string name="dialogPositiveButton">立即下载</string>
    <string name="dialogNegativeButton">以后再说</string>
    <string name="app_no_new_update">没有发现新版本</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="download_success">下载完成，点击安装</string>


    <!-- LoadingLayout-->
    <string name="unlogin">未登录</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="loading">登陆中...</string>
    <string name="requesting">请求中...</string>
    <string name="login_success">登录成功</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <!--LoginActivity-->
    <string name="login_username_hint">手机号码</string>
    <string name="login_password_hint">密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_account_register">帐号注册</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_third_account">第三方登录</string>
    <string name="login_qq_account">QQ登录</string>
    <string name="login_weixin_account">微信登录</string>
    <string name="email">邮箱</string>
    <string name="reset_password">重置密码</string>
    <string name="u_forgot_password"><u>找回密码</u></string>
    <string name="rele_tip">关联后,您的%s帐号和企好搜帐号都可以登录</string>
    <string name="register_tip">注册后，您的%s和企好搜帐号都可以登录</string>
    <string name="agreement_tip">点击\"注册\"即表示您同意</string>
    <string name="agreement_tv">《服务协议》</string>

    <string name="menu_qiye_search">企业查询</string>
    <string name="menu_share">APP分享</string>
    <string name="menu_comment">给个好评,亲</string>
    <string name="menu_user">个人中心</string>
    <string name="menu_setting">设置</string>
    <string name="menu_theme">夜间</string>
    <string name="main_menu_search">搜索</string>

    <!-- 验证手机号 -->
    <string name="verify_phone">验证手机号</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="get_validcode">获取验证码</string>
    <string name="submit">提交</string>
    <string name="time_count_tips">%d秒后重试</string>
    <string name="phone_format_error">手机格式错误</string>
    <!-- RegisterActivity -->
    <string name="register_valid_code">验证码</string>
    <string name="register_gain_code">点击获取</string>
    <string name="register_nickname">昵称</string>
    <string name="register_submit">注册</string>
    <string name="register_account">注册帐号</string>

    <!--title-->
    <string name="title_login">登陆</string>
    <string name="title_register">注册</string>
    <string name="title_bind_register">注册绑定</string>
    <string name="title_verfiy_phone">验证手机</string>

    <!--share-->
    <string name="share_pyq">朋友圈</string>
    <string name="share_wx">微信</string>
    <string name="share_qq">QQ</string>
    <string name="share_kj">QQ空间</string>


    <!-- HomeFragment  企业查询-->
    <string name="search_advanced">高级搜索</string>
    <string name="search_patent">搜专利</string>
    <string name="search_mark">搜商标</string>
    <string name="search_shesu">搜涉诉</string>

    <string name="double_click_exit">再按一次退出</string>
    <!--fragment user-->
    <string name="exit_login">退出当前登陆</string>
    <string name="user_set">用户设置</string>
    <string name="check_update">版本更新</string>
    <string name="home_title">企业信用查询-企好搜</string>
    <!--SetActivity-->
    <string name="set">设置</string>
    <string name="user_center">个人中心</string>
    <string name="input_email_hint">请输入邮箱</string>

    <string name="menu_search">搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="my_collect">我的关注</string>
    <string name="right_history_clear">清空搜索历史</string>

    <!-- 企业详情-->
    <string name="information_comment_origin">吐槽</string>
    <string name="information_sendmail">决策报告</string>
    <string name="information_attention">关注</string>
    <string name="information_share">分享</string>
    <string name="company_detial_redar">企业变更提示</string>
    <string name="information_commap_info">企业图谱</string>
    <string name="company_detial_contact">联络信息</string>
    <string name="company_detial_opername">法人代表</string>
    <string name="company_detial_end_null">一</string>
    <string name="company_detial_registcapi">注册资本</string>
    <string name="company_detial_termstart">成立日期</string>
    <string name="company_detial_status">经营状态</string>
    <string name="company_detial_checkdate">发照日期</string>
    <string name="company_detial_deadline_start">营业期限自</string>
    <string name="company_detial_deadline_end">营业期限至</string>
    <string name="company_register_no">注册号</string>
    <string name="company_zip_code">邮政编码</string>
    <string name="company_type">类型</string>
    <string name="company_contact_number">企业联系电话</string>
    <string name="company_email">电子邮箱</string>
    <string name="company_name">名称</string>
    <string name="company_register_organization">登记机构</string>
    <string name="company_credit_code">统一社会信用代码</string>
    <string name="company_present_address">企业通信地址</string>
    <string name="personal_residence">住所</string>
    <string name="company_work_num">从业人数(人)</string>
    <!--年报-->
    <string name="header_reportdetial_nocontent">（暂无内容）</string>
    <string name="company_reportdetial_nocontent">暂无相关内容</string>
    <string name="company_no_date">该企业没有相关信息</string>


    <!--商标详情-->
    <string name="trademark_details">商标详情</string>
    <string name="trademark_detial_name">商标名称</string>
    <string name="trademark_detial_category">商标类别</string>
    <string name="trademark_detial_regno">注册号</string>
    <string name="trademark_detial_status">状态</string>
    <string name="trademark_detial_appdate">申请时间</string>
    <string name="trademark_detial_validperiod">使用期限</string>
    <string name="trademark_detial_agent">代理机构</string>
    <string name="trademark_detial_flowitems">申请流程</string>
    <string name="trademark_detial_project">商品/服务项目</string>
    <!--投资人-->
    <string name="partner">投资人</string>
    <string name="partner_type">投资人类型</string>
    <string name="cert_num">证件号码</string>

    <string name="network_exception">网络异常</string>
    <string name="login_successed">登录成功</string>

    <!--网站信息-->
    <string name="website_name">网站名称: %s</string>
    <string name="website_check_date">审核时间: %s</string>
    <!--专利信息-->
    <string name="patent_type">类别: %s</string>
    <string name="patent_public_date">公布时间: %s</string>
    <string name="patent_detail">专利详细</string>
    <string name="request_number">申请号</string>
    <string name="patent_public_no">授权公布号</string>
    <string name="request_date">申请日</string>
    <string name="public_date">授权公布日期</string>
    <string name="request_person">申请人</string>
    <string name="inventor">发明人</string>
    <string name="patent_category">专利类型</string>
    <string name="category_no">分类号</string>
    <string name="category">分类</string>
    <string name="legal_status">法律状态</string>
    <string name="detail_info">详细信息</string>

    <!--著作权-->
    <string name="work_copy_right">作品著作权</string>
    <string name="software_copy_right">软件著作权</string>
    <string name="copyright_reg_no">登记号: %s</string>
    <string name="copyright_reg_date">登记日期: %s</string>
    <string name="copyright_public_date">发布日期: %s</string>
    <string name="copyright_complete_date">创作完成日期: %s</string>
    <string name="copyright_class_no">分类号: %s</string>


    <!--招聘信息-->
    <string name="job_salary">薪资: %s</string>
    <string name="job_address">地点: %s</string>
    <string name="job_experience">经验: %s</string>
    <string name="job_education">学历: %s</string>
    <string name="tv_job_name">职位名称</string>
    <string name="tv_job_address">工作地点</string>
    <string name="tv_job_public_date">发布时间</string>
    <string name="tv_job_salary">薪酬待遇</string>
    <string name="tv_job_experience">工作经验</string>
    <string name="tv_job_type">工作性质</string>
    <string name="tv_job_education">学历要求</string>
    <string name="tv_job_number">招聘人数</string>
    <string name="tv_job_detail">职位详细</string>

    <!--招投标-->
    <string name="tv_tender_name">中标公告</string>
    <string name="tv_tender_opentime">公告时间</string>
    <string name="tv_tender_address">标讯地区</string>
    <string name="tv_tender_no">公告编号</string>
    <string name="tv_tender_procurement">采购人</string>
    <string name="tv_tender_agentorg">代理机构</string>

    <!--失信-->
    <string name="idcard_number">组织机构号</string>
    <string name="legal_person">法定代表人</string>
    <string name="province">省份</string>
    <string name="execution_doc_number">执行依据文号</string>
    <string name="execution_court">执行法院</string>
    <string name="execution_date">立案时间</string>
    <string name="execution_department">做出执行依据单位</string>
    <string name="execution_status">被执行人履行情况</string>
    <string name="execution_final_duty">生效法律文书确定的义务</string>
    <string name="execution_desc">失信被执行人行为具体情形</string>
    <string name="execution_publish_date">发布日期</string>


    <string name="uploading">正在上传...</string>
</resources>
