<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rl_bottom_layout" android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="50.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@+id/v_infobottom_divider"
        style="@style/MyHorizontalDividerLine" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_infomation_bottom"
        android:layout_width="fill_parent"
        android:layout_height="49.5dip"
        android:baselineAligned="false"
        android:layout_below="@id/v_infobottom_divider">
        <TextView
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/light_text_color"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_infordetial_comment"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/information_comment_origin"
            android:drawableTop="@mipmap/infodetial_commont"
            android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/font_size_16"
            android:textColor="@color/light_text_color"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_infordetial_share"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/information_share"
            android:drawableTop="@mipmap/infodetial_share"
            android:layout_weight="1.0" />
        <TextView
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/light_text_color"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_infordetial_attention"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/information_attention"
            android:drawableTop="@mipmap/cancel_attention"
            android:layout_weight="1.0" />
        <TextView
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/light_text_color"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_infordetial_sendmail"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/information_sendmail"
            android:drawableTop="@mipmap/send_mail"
            android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>