<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/base_bg"
    android:layout_height="match_parent">
    <include
        layout="@layout/common_toolbar"
        />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:textColor="@color/light_text_color"
            android:textSize="@dimen/font_size_14"
            android:text="关联已有企好搜帐号"
            />

        <EditText
            android:id="@+id/edt_login_number"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="38.0dip"
            android:layout_marginRight="38.0dip"
            android:background="@drawable/bg_radius_border_white"
            android:drawableLeft="@mipmap/login_number"
            android:drawablePadding="10.0dip"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:inputType="number"
            android:paddingLeft="10.0dip"
            android:singleLine="true"
            android:textColor="#ff333333"
            android:textColorHint="#ffabb5b9"
            />

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_marginLeft="38.0dip"
            android:layout_marginRight="38.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/bg_radius_border_white"
            android:drawableLeft="@mipmap/login_password"
            android:drawablePadding="10.0dip"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10.0dip"
            android:singleLine="true"
            android:textColor="#ff333333"
            android:textColorHint="#ffabb5b9"
            />

        <TextView
            android:id="@+id/tv_rele_tip"
            android:layout_marginTop="40.0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_12"
            android:textColor="@color/base_text_color"
            android:text="@string/rele_tip"
            android:layout_marginLeft="38dp"
            />
        <Button
            android:id="@+id/btn_login_newpage"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_marginLeft="38.0dip"
            android:layout_marginRight="38.0dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_gradient_login"
            android:text="@string/login_button_login"
            android:enabled="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:layout_marginRight="38dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/font_size_14"
            android:text="@string/u_forgot_password"
            />
    </LinearLayout>
</LinearLayout>