<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        layout="@layout/common_toolbar"
        />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edt_register_number"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="30.0dip"
                android:background="@drawable/bg_radius_border_white"
                android:drawableLeft="@mipmap/login_number"
                android:drawablePadding="10.0dip"
                android:ems="10"
                android:hint="@string/login_username_hint"
                android:inputType="number"
                android:paddingLeft="10.0dip"
                android:singleLine="true"
                android:textColor="#ff333333"
                android:textColorHint="#ffabb5b9"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="20.0dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_register_valid"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="2.0"
                    android:background="@drawable/bg_radius_border_white"
                    android:drawableLeft="@mipmap/register_validcode"
                    android:drawablePadding="10.0dip"
                    android:ems="10"
                    android:hint="@string/register_valid_code"
                    android:inputType="number"
                    android:paddingLeft="10.0dip"
                    android:singleLine="true"
                    android:textColor="#ff333333"
                    android:textColorHint="#ffabb5b9"
                 />

                <Button
                    android:id="@+id/btn_register_getvalid"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="15.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_gradient_register_validcode"
                    android:text="@string/register_gain_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_18"
                    android:enabled="false"
                 />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="20.0dip" >

                <EditText
                    android:id="@+id/edt_register_password"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:background="@drawable/bg_radius_border_white"
                    android:drawableLeft="@mipmap/login_password"
                    android:drawablePadding="10.0dip"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="10.0dip"
                    android:singleLine="true"
                    android:textColor="#ff333333"
                    android:textColorHint="#ffabb5b9"
                 />

                <ToggleButton
                    android:id="@+id/tb_change_version"
                    android:layout_width="40.0dip"
                    android:layout_height="20.0dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10.0dip"
                    android:background="@drawable/selector_toggle_butyton"
                    android:checked="false"
                    android:textOff=""
                    android:textOn=""
                />

            </RelativeLayout>

            <EditText
                android:id="@+id/edt_register_nickname"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="20.0dip"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_radius_border_white"
                android:drawableLeft="@mipmap/register_nickname"
                android:drawablePadding="10.0dip"
                android:hint="@string/register_nickname"
                android:paddingLeft="10.0dip"
                android:singleLine="true"
                android:textColor="#ff333333"
                android:textColorHint="#ffabb5b9"
             />
            <TextView
                android:id="@+id/tv_register_bind_tip"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_tip"
                android:textSize="@dimen/font_size_12"
                android:textColor="@color/base_text_color"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/bg_gradient_login"
                android:text="@string/register_submit"
                android:enabled="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_20" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/base_text_color"
                    android:textSize="@dimen/font_size_14"
                    android:text="@string/agreement_tip"
                    />
                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/font_size_14"
                    android:text="@string/agreement_tv"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
