<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/menu_header_bg" />

        <com.facebook.drawee.view.SimpleDraweeView
            fresco:placeholderImage="@mipmap/ic_default_avatar"
            fresco:roundAsCircle="true"
            android:id="@+id/iv_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:paddingLeft="7dp"
            android:paddingRight="6dp"
            android:paddingTop="7dp"
            android:paddingBottom="6dp"
            android:background="@mipmap/menu_avatar_bg" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/iv_avatar"
            android:text="@string/unlogin"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>
    <com.qihaosou.view.CustomerScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/menu_item_search"
                style="@style/MenuItemLayoutStyle" >

                <ImageView
                    style="@style/MenuItemImageViewStyle"
                    android:background="@mipmap/menu_search"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:gravity="center"
                    android:text="@string/menu_qiye_search" />
            </LinearLayout>

            <View
                style="@style/h_line" />

            <LinearLayout
                android:id="@+id/menu_item_share"
                style="@style/MenuItemLayoutStyle" >

                <ImageView
                    style="@style/MenuItemImageViewStyle"
                    android:background="@mipmap/menu_share"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/menu_share" />
            </LinearLayout>

            <View
                style="@style/h_line" />

            <LinearLayout
                android:id="@+id/menu_item_com"
                style="@style/MenuItemLayoutStyle" >

                <ImageView
                    style="@style/MenuItemImageViewStyle"
                    android:background="@mipmap/menu_comment"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/menu_comment" />
            </LinearLayout>

            <View
                style="@style/h_line" />

            <LinearLayout
                android:id="@+id/menu_item_user"
                style="@style/MenuItemLayoutStyle" >

                <ImageView
                    style="@style/MenuItemImageViewStyle"
                    android:background="@mipmap/menu_userinfo"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/menu_user" />
            </LinearLayout>

            <View
                style="@style/h_line" />
        </LinearLayout>
   </com.qihaosou.view.CustomerScrollView>

</LinearLayout>